--- a/_sections/2021-03-03-welcome.markdown
+++ b/_sections/2021-03-03-welcome.markdown
@@ -5,4 +5,4 @@ date:   2021-03-03 12:12:01 -0500
 categories: welcome
 ---
 
-This data set uses <em>Old Bailey Proceedings</em> to investigate how female medical practitioners understood the body. What knowledge did they use to imact criminal proceedings in the name of the crown? What medical misconceptions did they perpetuate or challenge? 
+This data set uses <em>Old Bailey Proceedings</em> to investigate how female medical practitioners understood the body. What knowledge did they use to impact criminal proceedings in the name of the crown? What medical misconceptions did they perpetuate or challenge? 
